; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_cmmsta.c_zfMmStaTimeTick.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_cmmsta.c_zfMmStaTimeTick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32, i32 }

@wd = common dso_local global %struct.TYPE_2__* null, align 8
@ZM_MODE_AP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zfMmStaTimeTick(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @zmw_get_wlan_dev(i32* %3)
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wd, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @ZM_MODE_AP, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %33

10:                                               ; preds = %1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wd, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %33, label %15

15:                                               ; preds = %10
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wd, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = and i32 %18, 1
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %15
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @zfTimerCheckAndHandle(i32* %22)
  br label %24

24:                                               ; preds = %21, %15
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @zfStaCheckRxBeacon(i32* %25)
  %27 = load i32*, i32** %2, align 8
  %28 = call i32 @zfStaTimer100ms(i32* %27)
  %29 = load i32*, i32** %2, align 8
  %30 = call i32 @zfStaCheckConnectTimeout(i32* %29)
  %31 = load i32*, i32** %2, align 8
  %32 = call i32 @zfPowerSavingMgrMain(i32* %31)
  br label %33

33:                                               ; preds = %24, %10, %1
  ret void
}

declare dso_local i32 @zmw_get_wlan_dev(i32*) #1

declare dso_local i32 @zfTimerCheckAndHandle(i32*) #1

declare dso_local i32 @zfStaCheckRxBeacon(i32*) #1

declare dso_local i32 @zfStaTimer100ms(i32*) #1

declare dso_local i32 @zfStaCheckConnectTimeout(i32*) #1

declare dso_local i32 @zfPowerSavingMgrMain(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
